workshop03/bggapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bgg-app-deploy
  namespace: bggns
  labels:
    app: bgg-app-deploy
spec:
  replicas: 1
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 0
  selector:
    matchLabels:
      name: bgg-app-pod
  template:
    metadata:
      name: bgg-app-pod
      labels:
        name: bgg-app-pod
    spec:
      containers:
      - name: bgg-app-container
        image: stackupiss/bgg-backend:v2
        args:
          - "--prefix" 
          - /v2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 3000
        #   timeoutSeconds: 5
        #   failureThreshold: 1
        #   initialDelaySeconds: 5
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 3000
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        #   successThreshold: 1
        #   initialDelaySeconds: 5
---

apiVersion: v1
kind: Service
metadata:
  name: bgg-app-svc
  namespace: bggns
spec:
    type: ClusterIP
    selector:
        name: bgg-app-pod
    ports:
        - port: 3002
          targetPort: 3000
