workshop03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: bggns
spec:
  ingressClassName: nginx
  rules:
  - host: bgg-104.248.98.16.nip.io
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: bgg-app-svc-v1
            port:
              number: 3001
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: bgg-app-svc
            port:
              number: 3002
